# zkp-tests

./: README.md  package.json
circom/: .gitignore  Makefile  hardhat.config.js  package.json
circom/circuits/: advent2.circom  iszeroevil.circom  iszeroright.circom  iszerowrong.circom  multiplier2.circom  multipliersq.circom
circom/contracts/: advent2.sol  iszeroright.sol  iszerowrong.sol  multiplier2.sol
circom/inputs/: advent2.json  iszeroevil.json  iszerowrong.json
circom/test/: verify.js
docs/: advent2.md
halo2/: Cargo.toml
halo2/src/: advent2.rs  fibo1.rs
halo2/src/chips/: is_zero.rs
noir/: .gitignore  Makefile  hardhat.config.js  hardhat.config.ts  package.json  tsconfig.json
noir/circuits/advent2/: Prover.toml  Verifier.toml
noir/circuits/advent2/src/: main.nr
noir/circuits/multiplier2/: Prover.toml  Verifier.toml
noir/circuits/multiplier2/src/: main.nr
noir/contracts/: advent2.sol  multiplier2.sol
