[package]
name = "halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fibo1"
path = "src/fibo1.rs"

[dependencies]
halo2_proofs = { git = "https://github.com/zcash/halo2/", features = ["dev-graph"] }
plotters = "0.3.0"
group = "0.13"
tabbycat = "0.1.2"
